# c2pa-raw-crypto

./: .commitlintrc.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  release-plz.toml
.github/workflows/: ci.yml  pr_title.yml  release.yml
src/: ec_utils.rs  lib.rs  oid.rs  signer.rs  signing_alg.rs  validator.rs
src/openssl/signers/: ecdsa_signer.rs  ed25519_signer.rs  rsa_signer.rs
src/openssl/validators/: ecdsa_validator.rs  ed25519_validator.rs  mod.rs  rsa_legacy_validator.rs  rsa_validator.rs
src/rust_native/signers/: ecdsa_signer.rs  ed25519_signer.rs  mod.rs  rsa_signer.rs
src/rust_native/validators/: ecdsa_validator.rs  ed25519_validator.rs  mod.rs  rsa_legacy_validator.rs  rsa_validator.rs
src/tests/: signers.rs  validators.rs
tests/fixtures/raw_signature/: multiprime_rsa.priv  secp256k1.priv  secp256k1.pub_key
